# dnuos

./: CLAUDE.md  README.md  build_translations.py  msgfmt.py  pyproject.toml  run_tests.py  setup.py  setup.py.bak  v3-update.md
debian/: changelog
dnuos/: __init__.py  appdata.py  audiodir.py  audiotype.py  conf.py  misc.py  path.py
dnuos/cache/: shelvecache.py
dnuos/id3/: ID3v2Frames.py  __init__.py
dnuos/locale/fr/LC_MESSAGES/: dnuos.mo
dnuos/output/: abstract_renderer.py  html.py  plaintext.py
dnuostests/: cache.py  functest.py
